--- a/environment.yml
+++ b/environment.yml
@@ -5,13 +5,13 @@ channels:
 dependencies:
   - pip 
   - python >= 3.8
-  - pytorch >= 1.13
+  - pytorch=1.13
   - torchvision
   - pytorch-cuda=11.7
   - pip:
+    - accelerate==0.12.0
     - timm
     - diffusers
-    - accelerate
     - pycocotools
     - transformers
     - einops
